Programming languages and paradigms/Interpreter/examples/bad/invalid_indirect.ho
func main() {
    var x int;
    var p = *x; // error:3:13: invalid indirect (type int)
}